--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,66 @@ Green: #00B172
 White: #FFF
 
 */
+
+@import url("https://fonts.cdnfonts.com/css/gotham-rounded");
+html {
+  font-size: 10px;
+  font-family: "Gotham Rounded", sans-serif !important;
+}
+
+#logo {
+  width: 234px;
+  height: 72px;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 68px;
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #1a1a1a;
+  font-weight: lighter;
+  font-size: 1.3rem;
+}
+
+.nav-bar ul {
+  display: flex;
+  gap: 30px;
+}
+
+.nav-bar a {
+  text-decoration: none;
+}
+
+.header-background {
+  background-image: url("/images/landing.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  position: relative;
+  height: 100vh;
+}
+
+.header-text {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+  width: 100%;
+}
+
+.header-text h1 {
+  font-size: 6rem;
+  font-weight:300;
+  margin-bottom: 3rem;
+}
+
+.header-text p {
+    font-size: 1.5rem;
+    font-weight: lighter;
+    line-height: 1.5;
+}
