--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ html {
 }
 
 .header-background {
-  background-image: url("/images/landing.jpg");
+  background-image: url("../images/landing.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -74,7 +74,7 @@ html {
 }
 
 #whats-on-spotify {
-  height: 50vh;
+  height: 400px;
   width: 90%;
   margin: auto;
 }
@@ -86,17 +86,106 @@ html {
 
 .flex {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   width: 100%;
 }
 
 .flex-column {
   flex: 25%;
-  align-self: center;
   text-align: center;
 }
 
 .flex-column img {
   height: 72px;
+}
+
+#whats-on-spotify h2 {
+  margin-top: 40px;
+  font-size: 2.2rem;
+  font-weight: 300;
+  padding-bottom: 10px;
+  width: 40%;
+}
+
+#whats-on-spotify h2 span {
+  border-bottom: 3px solid #00b172;
+}
+
+#whats-on-spotify h3 {
+  margin-top: 30px;
+  font-size: 1.8rem;
+  font-weight: 300;
+}
+
+#whats-on-spotify p {
+  margin-top: 40px;
+  font-size: 2rem;
+  font-weight: 300;
+}
+
+#whats-on-spotify img {
+  margin-top: 10vh;
+}
+
+#what-you-can-do {
+  background-image: url(/images/spotify-icon-white.png);
+  background-position: center;
+  background-size: 100px 100px;
+  background-repeat: no-repeat;
+  background-color: #00b172;
+  height: 800px;
+  width: 95%;
+  margin: 50px auto;
+  line-height: 1.3;
+  overflow: hidden;
+}
+
+.what-you-can-do-content {
+  position: relative;
+  left: 5%;
+}
+
+#what-you-can-do h2 {
+  font-size: 2.2rem;
+  font-weight: 400;
+  color: #fff;
+  position: relative;
+  top: 10%;
+  left: 5%;
+}
+
+.what-you-can-do-content h3 {
+  margin-top: 30px;
+  font-size: 1.8rem;
+  font-weight: 400;
+  color: #fff;
+}
+
+.what-you-can-do-content p {
+  margin-top: 20px;
+  font-size: 1.5rem;
+  font-weight: 300;
+  color: #fff;
+}
+
+#what-you-can-do h2 span {
+  border-bottom: 3px solid #fff;
+}
+
+.flex-app {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.what-you-can-do-content img {
+  height: 700px;
+  padding-right: 200px;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: column;
 }
